--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,6 +139,10 @@ jobs:
           build_name: civi-stable
           version: "stable"
           url: http://localhost:8081
+      - run_all:
+          build_name: civi-5.39
+          version: "5.39"
+          url: http://localhost:8082
 
 workflows:
   version: 2
